--- a/src/quartus/Class4.qsf
+++ b/src/quartus/Class4.qsf
@@ -394,17 +394,18 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -entity DE0_NANO_SOC_D
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -entity DE0_NANO_SOC_Default -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -entity DE0_NANO_SOC_Default -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity DE0_NANO_SOC_Default -section_id Top
-set_global_assignment -name VERILOG_FILE ../rtl/Class4.v
-set_global_assignment -name VHDL_FILE ../rtl/uart.vhd
-set_global_assignment -name VHDL_FILE ../rtl/commandModule.vhd
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name CDF_FILE output_files/Chain1.cdf
 set_global_assignment -name ENABLE_SIGNALTAP ON
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/stp1.stp
+set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
+set_global_assignment -name VHDL_FILE ../rtl/automaton.vhd
+set_global_assignment -name VERILOG_FILE ../rtl/Class4.v
+set_global_assignment -name VHDL_FILE ../rtl/uart.vhd
+set_global_assignment -name VHDL_FILE ../rtl/commandModule.vhd
+set_global_assignment -name CDF_FILE output_files/Chain1.cdf
 set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
